<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="keywords_lumi_settings">LumiROM Settings</string>
    <string name="menu_key_lumi_top_settings">top_level_lumi</string>
    <string name="lumi_asks_title">Disable ASKS</string>
    <string name="lumi_device_name_title">Device name</string>
    <string name="lumi_dialog_reboot_msg">To apply the changes, a restart is required.</string>
    <string name="lumi_dialog_reboot_negative">Not now</string>
    <string name="lumi_dialog_reboot_positive">Restart</string>
    <string name="lumi_dialog_reboot_title">Restart required</string>
    <string name="lumi_extra_settings_title">Extra settings</string>
    <string name="lumi_hide_dev_title">Hide developer status</string>
    <string name="lumi_launcher_anim_type_title">Launcher animation type</string>
    <string name="lumi_menu_item_reboot_download_title">Reboot to Download</string>
    <string name="lumi_menu_item_reboot_recovery_title">Reboot to Recovery</string>
    <string name="lumi_menu_item_reboot_title">Reboot</string>
    <string name="lumi_menu_reboot_title">Reboot options</string>
    <string name="lumi_rom_version_title">ROM version</string>
    <string name="lumi_settings_title">LumiROM Settings</string>
    <string name="lumi_ui_settings_title">UI settings</string>
    <string name="lumi_updates_title">Update ROM</string>
</resources>
